--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,6 +1,6 @@
 <body style="height: 100vh;">
   <!-- Preloader -->
-  <div class="site-preloader-wrap">
+  <!--<div class="site-preloader-wrap">
     <div class="cf-loader">
       <div class="loading-spinner"></div>
       <div class="go-rounder"></div>
@@ -8,7 +8,7 @@
       <div class="loader-text">
       </div>
     </div>
-  </div>
+  </div>-->
   <!-- End Preloader -->
 
   <!-- Sign In Form Area -->
