--- a/src/assets/dashboard/css/pages/dashboard3.css
+++ b/src/assets/dashboard/css/pages/dashboard3.css
@@ -58,8 +58,7 @@ File: scss
 .c3-chart-arcs-title {
   font-size: 26px;
   font-weight: 600;
-  color: #67757c;
-  font-family: "Montserrat", sans-serif; }
+  color: #67757c; }
 
 /*******************
  Project of the month
