--- a/src/app/component/dashboard/user/user.component.html
+++ b/src/app/component/dashboard/user/user.component.html
@@ -487,7 +487,7 @@
         <!-- ============================================================== -->
       
         <div class="page-wrapper">
-          <router-outlet name="admin"></router-outlet>
+          <router-outlet name="home"></router-outlet>
       <!-- ============================================================== -->
       <!-- End Container fluid  -->
       <!-- ============================================================== -->
