--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -44,7 +44,7 @@ This files contents are outlined below>>>>>
 /* ==============
     Default CSS 
 ======================== */
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700|Open+Sans:300,400,600,700');
+
 body {
     font-family: "Open Sans", Helvetica, Arial, sans-serif;
     font-size: 16px;
@@ -65,7 +65,7 @@ a:hover {
     text-decoration: none;
 }
 h1,h2,h3,h4,h5 {
-	font-family: font-family: 'Montserrat', sans-serif;
+    
     font-weight: 700;
     color: #333;
     line-height: 1.3;
@@ -3341,3 +3341,7 @@ li.parsley-required, #contact_send_status {
    color: #fff;
 }
 /* === End Coming Soon CSS === */
+
+.navbar {
+    margin-bottom: 0px;
+}
