--- a/src/app/component/dashboard/admin/admin.component.html
+++ b/src/app/component/dashboard/admin/admin.component.html
@@ -414,7 +414,7 @@
                   </li>
                   <li role="separator" class="divider"></li>
                   <li>
-                    <a (click)="logout()">
+                    <a (click)="Logout()">
                       <i class="fa fa-power-off"></i> Logout</a>
                   </li>
                 </ul>
@@ -463,7 +463,7 @@
             <li class="nav-small-cap">PERSONAL</li>
             <ul *ngFor="let item of menuData" >
               <li>
-                <a class="has-arrow waves-effect waves-dark" [routerLink]="['/dashboard', {outlets: {'dash': [item.href]}}]" aria-expanded="false">
+                <a class="has-arrow waves-effect waves-dark" [routerLink]="[{outlets: {'admin': [item.href]}}]" aria-expanded="false">
                   <i class="mdi mdi-bullseye"></i>
                   <span class="hide-menu">{{item.title}}</span>
                 </a>
