--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,6 +1,6 @@
 <body>
 	<!-- Preloader -->
-	<div class="site-preloader-wrap">
+	<!--<div class="site-preloader-wrap">
 		<div class="cf-loader">
 			<div class="loading-spinner"></div>
 			<div class="go-rounder"></div>
@@ -8,7 +8,7 @@
 			<div class="loader-text">
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<!-- End Preloader -->
 	
 	<!-- Start Top Header Area -->
