--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -122,7 +122,7 @@
 									   </ul> 
 									</li>
 									<li><a href="contact-us.html">Contact</a></li>
-									<li class="sign-in"><a href="/login">Sign in</a></li>
+									<li class="sign-in"><a (click)="signin()">Sign in</a></li>
 									<!--<li><a href="signup.html">Sign up</a></li>-->
 									<li><a href="#search"><i class="fa fa-search"></i></a></li>
 								</ul>
