--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -500,7 +500,8 @@ hr {
 }
 .main-menu-area .navbar-nav > li > a:focus, 
 .main-menu-area .navbar-nav > li > a:hover {
-	background-color: #f5f5f5;
+    background-color: #f5f5f5;
+    cursor: pointer;
 }
 .main-menu-area .dropdown-menu > .active > a, 
 .main-menu-area .dropdown-menu > .active > a:focus, 
