chat and login and signup add route

--- a/src/app/component/signup/signup.component.html
+++ b/src/app/component/signup/signup.component.html
@@ -53,7 +53,7 @@
                     <a href="#">Privacy Policy</a>.</p>
             </form>
             <p class="text-center">Already have an account?
-                <a href="signin.html">Login here</a>.</p>
+                <a (click)="login()">Login here</a>.</p>
         </div>
     </div>
 </body>
