--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -48,7 +48,7 @@
           <a href="#">Privacy Policy</a>.</p>
       </form>
       <p class="text-center">You have not an account?
-        <a href="signup.html">SignUp here</a>.</p>
+        <a (click)="signUp()">SignUp here</a>.</p>
     </div>
   </div>
   <!-- End Sign In Form Area -->
