--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import "~@progress/kendo-theme-default/scss/all";
+
+#onAenlw-1525126443940 {
+    display: none;
+}
