--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -330,7 +330,8 @@
 							<img src="../../assets/img/dog.png" alt="car">
 						</div>
 						<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its
-							layout.</p>
+							layout.
+						</p>
 					</div>
 				</div>
 			</div>
@@ -498,7 +499,8 @@
 							<img src="../../assets/img/dog.png" alt="car">
 						</div>
 						<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its
-							layout.</p>
+							layout.
+						</p>
 					</div>
 				</div>
 			</div>
@@ -620,7 +622,8 @@
 							<img src="../../assets/img/dog.png" alt="car">
 						</div>
 						<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its
-							layout.</p>
+							layout.
+						</p>
 					</div>
 				</div>
 			</div>
@@ -773,7 +776,8 @@
 							<img src="../../assets/img/dog.png" alt="car">
 						</div>
 						<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its
-							layout.</p>
+							layout.
+						</p>
 					</div>
 				</div>
 			</div>
@@ -909,7 +913,8 @@
 							<img src="../../assets/img/dog.png" alt="car">
 						</div>
 						<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its
-							layout.</p>
+							layout.
+						</p>
 					</div>
 				</div>
 			</div>
@@ -1009,7 +1014,8 @@
 							<img src="../../assets/img/dog.png" alt="car">
 						</div>
 						<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its
-							layout.</p>
+							layout.
+						</p>
 					</div>
 				</div>
 			</div>
@@ -1156,7 +1162,8 @@
 							<img src="../../assets/img/dog.png" alt="car">
 						</div>
 						<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its
-							layout.</p>
+							layout.
+						</p>
 					</div>
 				</div>
 			</div>
@@ -1385,5 +1392,7 @@
 	<!-- Back Top top -->
 	<a href="#content" class="back-to-top">Top</a>
 	<!-- End Back Top top -->
-
+	<script>
+		setTimeout(function () { console.log($('#innerWrapper div').length) }, 8000);
+	</script>
 </body>
